# bazocker

./: .gitignore  MODULE.bazel  README.md
samples/python/: BUILD.bazel  main.py  ololo.ini  py_layer.bzl
samples/ubuntu/: BUILD.bazel  test.sh
